welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:3: error: ';' expected but '(' found.
	var T:Array[Int](10)
                        ^